--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,33 +2,19 @@ on: push
 name: Main Workflow
 jobs:
   build:
-    name: Compile and Test
+    name: Build, Test and Analyze
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Setup go
+      - name: Setup Go
         uses: actions/setup-go@v1
         with:
           go-version: '1.13'
-      - run: make test
-      - name: Archive code coverage results
-        uses: actions/upload-artifact@v1
-        with:
-          name: code-coverage-report
-          path: bin
-
-  sonarCloudTrigger:
-    name: SonarCloud Trigger
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: Download code coverage results
-      uses: actions/download-artifact@v1
-      with:
-        name: code-coverage-report
-        path: bin
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Clone Repository
+        uses: actions/checkout@master
+      - name: Build and Test
+        run: make test
+      - name: Analyze with SonarCloud
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
